[tool.poetry]
name = "rld"
version = "0.1.1"
description = "A development tool for evaluation and interpretability of reinforcement learning agents."
license = "MIT"
authors = ["Tomasz Wrona <tomasz@wrona.me>"]
readme = "README.md"
repository = "https://github.com/iamhatesz/rld"
keywords = ["reinforcement learning", "development-tools", "debugging-tools", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed"
]
include = ["rld/app/**/*"]

[tool.poetry.dependencies]
python = "^3.7"
ray = {extras = ["all"], version = "^0.8.6"}
torch = "^1.6.0"
captum = "^0.2.0"
flask = "^1.1.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flask_cors = "^3.0.8"
pre-commit = "^2.6.0"
pytest = "^5.4.3"
notebook = "^6.1.3"

[tool.poetry.scripts]
rld = "rld.cli:main"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
